force-app/main/default/objects/page_component__c/page_component__c.object-meta.xml
<CustomObject>
    <label>page component</label>
    <nameField>
        <label>page component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>page components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>