force-app/main/default/objects/page_component__c/fields/Chatter_Group__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Group__c</fullName>
    <label>Chatter Group</label>
    <length>225</length>
    <type>Text</type>
</CustomField>