force-app/main/default/objects/page_component__c/fields/Class_Tag__c.field-meta.xml
<CustomField>
    <fullName>Class_Tag__c</fullName>
    <label>Class Tag</label>
    <length>40</length>
    <type>Text</type>
</CustomField>