force-app/main/default/objects/page_component__c/fields/Component_Order__c.field-meta.xml
<CustomField>
    <fullName>Component_Order__c</fullName>
    <label>Component Order</label>
    <length>25</length>
    <type>Text</type>
</CustomField>