force-app/main/default/objects/page_component__c/fields/Main_Content__c.field-meta.xml
<CustomField>
    <fullName>Main_Content__c</fullName>
    <label>Main Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>