force-app/main/default/objects/page_component__c/fields/Parent_component__c.field-meta.xml
<CustomField>
    <fullName>Parent_component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>page component</label>
    <referenceTo>page_component__c</referenceTo>
    <relationshipLabel>Parent component</relationshipLabel>
    <relationshipName>page_components</relationshipName>
    <type>Lookup</type>
</CustomField>