force-app/main/default/objects/page_component__c/fields/Portal_Page__c.field-meta.xml
<CustomField>
    <fullName>Portal_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Page</label>
    <referenceTo>Portal_Page__c</referenceTo>
    <relationshipLabel>page components</relationshipLabel>
    <relationshipName>Portal_Page</relationshipName>
    <type>Lookup</type>
</CustomField>