force-app/main/default/objects/page_component__c/fields/VFPageName__c.field-meta.xml
<CustomField>
    <fullName>VFPageName__c</fullName>
    <label>VFPageName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>