force-app/main/default/objects/page_component__c/fields/Video_ID__c.field-meta.xml
<CustomField>
    <fullName>Video_ID__c</fullName>
    <label>Video ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>