force-app/main/default/objects/page_component__c/recordTypes/Chatter.recordType-meta.xml
<RecordType>
    <fullName>Chatter</fullName>
    <active>true</active>
    <label>Chatter</label>
</RecordType>