force-app/main/default/objects/page_component__c/recordTypes/Content.recordType-meta.xml
<RecordType>
    <fullName>Content</fullName>
    <active>true</active>
    <label>Content</label>
</RecordType>