force-app/main/default/objects/page_component__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>